--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="container-left">
         <h1>Easy Shopping Via Mobile</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lorem justo, sollicitudin vel ultricies sed,
-            eleifend nec metus. Etiam vitae pellentesque dolor. </p>
+            eleifend nec metus.</p>
         <button class="fonte-butao">Get Started</button>
     </section>
 
